fixed padding on project details (problem/challenge) so that it doesn't go to edges of screen on mobile

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -580,7 +580,7 @@ font-style: italic;
 @media only screen and (max-width:580px){
 
 .projectDetail{
-    padding:0px;
+    padding:10px 35px;
     margin:20px 0;
 
 }
